<resources>
    <string name="app_name">Push Motivator</string>
    <string name="tv_filter_title">Quotes by</string>
    <string name="btn_topic">Topic</string>
    <string name="btn_author">Author</string>
    <string name="btn_quote_wall">Quote Wall</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="action_search">Search</string>
    <string name="search_hint">Start typing something for live search</string>
    <string name="quote_count">Quote Count</string>
    <string name="number_count">Number Count</string>
    <string name="author">Author</string>
    <string name="backup">Backup</string>
    <string name="topic">Topic</string>
    <string name="stop_pushing">Stop Pushing</string>
    <string name="push_every">Push every</string>
    <string name="start_pushing">Start Pushing</string>
    <string name="hour">hour</string>
    <string name="share_using">Share using</string>
    <string name="push_started">Push started</string>
    <string name="not_pushing">Not Pushing</string>
</resources>

