<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myfrag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/background_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/text_banner"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/tv_filter_title"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/accent"
                android:textSize="50sp" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="50dp"
                android:baselineAligned="false"
                android:minHeight="100dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/accent"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center_horizontal|bottom"
                        android:text="@string/topic"
                        android:textAllCaps="false"
                        android:textColor="@color/primary_dark"
                        android:textSize="50sp"
                        android:textStyle="italic" />

                    <ImageButton
                        android:id="@+id/btn_topic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/accent"
                        android:contentDescription="@string/btn_topic"
                        android:text="@string/btn_topic"

                        android:textColor="@color/icons" />


                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/accent"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center_horizontal|bottom"
                        android:text="@string/author"
                        android:textAllCaps="false"
                        android:textColor="@color/primary_dark"
                        android:textSize="50sp"
                        android:textStyle="italic" />

                    <ImageButton
                        android:id="@+id/btn_auth"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/accent"
                        android:contentDescription="@string/btn_author"
                        android:text="@string/btn_author"
                        android:textColor="@color/icons" />

                </FrameLayout>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="50dp"
                android:minHeight="100dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/accent"
                    android:contentDescription="@string/backup" />

                <ImageButton
                    android:id="@+id/btn_wall"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/accent"
                    android:contentDescription="@string/btn_quote_wall"
                    android:text="@string/btn_quote_wall"
                    android:textColor="@color/icons" />

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>